--- a/TomasulosAlgorithm/TomasulosAlgorithm.vcxproj.filters
+++ b/TomasulosAlgorithm/TomasulosAlgorithm.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClCompile Include="Form1.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="InstObj.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Form1.h">
