--- a/TomasulosAlgorithm/TomasulosAlgorithm.vcxproj.filters
+++ b/TomasulosAlgorithm/TomasulosAlgorithm.vcxproj.filters
@@ -21,9 +21,18 @@
     <ClCompile Include="InstObj.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="aboutPopUp.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="AboutPopUp1.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Form1.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="AboutPopUp1.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
